[package]
name = "python-linux-keyutils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_linux_keyutils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.3"
linux-keyutils = "0.2"
zeroize = "1.8"